USE_CABAL=	HUnit-1.6.2.0 \
		OneTuple-0.4.2.1 \
		QuickCheck-2.18.0.0 \
		StateVar-1.2.2 \
		aeson-2.2.4.1 \
		ansi-terminal-1.1.5 \
		ansi-terminal-types-1.1.3 \
		appar-0.1.8 \
		assoc-1.1.1_2 \
		async-2.2.6 \
		attoparsec-0.14.4_6 \
		auto-update-0.2.6 \
		base-orphans-0.9.4 \
		base16-1.0_4 \
		base64-1.0_3 \
		base64-bytestring-1.2.1.0_1 \
		bifunctors-5.6.3_1 \
		blaze-builder-0.4.4.1 \
		blaze-html-0.9.2.0_1 \
		blaze-markup-0.8.3.0_2 \
		bsb-http-chunked-0.0.0.4_4 \
		byteorder-1.0.4 \
		call-stack-0.4.0 \
		case-insensitive-1.2.1.0 \
		character-ps-0.1 \
		colour-2.3.7 \
		comonad-5.0.10 \
		contravariant-1.5.6 \
		cookie-0.5.1 \
		cryptohash-md5-0.11.101.0_6 \
		crypton-1.1.2 \
		crypton-asn1-encoding-0.10.0 \
		crypton-asn1-parse-0.10.0 \
		crypton-asn1-types-0.4.1 \
		crypton-pem-0.3.0 \
		crypton-x509-1.9.0 \
		data-default-0.8.0.2 \
		data-default-class-0.2.0.0 \
		data-fix-0.3.4_2 \
		distributive-0.6.3 \
		dlist-1.0_2 \
		easy-file-0.2.5 \
		fast-logger-3.2.6 \
		file-embed-0.0.16.0 \
		hashable-1.5.1.0 \
		hsc2hs-0.68.10_5 \
		http-date-0.0.11 \
		http-semantics-0.4.0 \
		http-types-0.12.4 \
		http2-5.4.0 \
		indexed-traversable-0.1.4_2 \
		indexed-traversable-instances-0.1.2.1 \
		integer-conversion-0.1.1_2 \
		integer-logarithms-1.0.5 \
		iproute-1.7.15 \
		mime-types-0.1.2.2 \
		network-3.2.8.0 \
		network-byte-order-0.1.8 \
		network-control-0.1.7 \
		network-uri-2.6.4.2_1 \
		old-locale-1.0.0.7_2 \
		old-time-1.1.1.0 \
		optparse-applicative-0.19.0.0 \
		prettyprinter-1.7.1 \
		prettyprinter-ansi-terminal-1.1.3 \
		primitive-0.9.1.0_1 \
		psqueues-0.2.8.3 \
		ram-0.22.0 \
		random-1.3.1 \
		recv-0.1.1 \
		resourcet-1.3.0 \
		scientific-0.3.8.1 \
		semialign-1.3.1.1 \
		semigroupoids-6.0.2_1 \
		simple-sendfile-0.2.32 \
		splitmix-0.1.3.2 \
		streaming-commons-0.2.3.1 \
		strict-0.5.1_1 \
		tagged-0.8.10_1 \
		tasty-1.5.4 \
		text-iso8601-0.1.1.1 \
		text-short-0.1.6.1 \
		th-abstraction-0.7.2.0 \
		th-compat-0.1.7 \
		these-1.2.1_3 \
		time-compat-1.9.9_1 \
		time-hourglass-0.3.0 \
		time-manager-0.3.2 \
		transformers-compat-0.8 \
		unix-compat-0.7.4.1 \
		unix-time-0.4.17 \
		unliftio-core-0.2.1.0_4 \
		unordered-containers-0.2.21_2 \
		utf8-string-1.0.2 \
		uuid-types-1.0.6.1 \
		vault-0.3.1.6 \
		vector-0.13.2.0_2 \
		vector-stream-0.1.0.1_4 \
		wai-3.2.4 \
		wai-extra-3.1.18 \
		wai-logger-2.5.0 \
		warp-3.4.13 \
		witherable-0.5_2 \
		word8-0.1.3 \
		zlib-0.7.1.1
