USE_CABAL=	HUnit-1.6.2.0 \
		OneTuple-0.4.3 \
		QuickCheck-2.18.0.0 \
		StateVar-1.2.2 \
		aeson-2.3.0.0_1 \
		ansi-terminal-1.1.5 \
		ansi-terminal-types-1.1.3 \
		appar-0.1.8 \
		assoc-1.1.1_2 \
		async-2.2.6 \
		atomic-counter-0.1.2.4 \
		attoparsec-0.14.4_6 \
		auto-update-0.2.6 \
		base-orphans-0.9.4 \
		base16-1.0_4 \
		base16-bytestring-1.0.2.0_1 \
		base64-1.0_3 \
		base64-bytestring-1.2.1.0_1 \
		bifunctors-5.6.3_1 \
		bitvec-1.1.6.0 \
		blaze-builder-0.4.4.1 \
		bsb-http-chunked-0.0.0.4_4 \
		byteorder-1.0.4 \
		call-stack-0.4.0 \
		case-insensitive-1.2.1.0 \
		cborg-0.2.10.0_3 \
		cereal-0.5.8.3 \
		character-ps-0.1 \
		clock-0.8.4 \
		colour-2.3.7 \
		comonad-5.0.10 \
		conduit-1.3.6.1 \
		conduit-extra-1.3.8_1 \
		contravariant-1.5.6 \
		cookie-0.5.1 \
		crypto-token-0.2.0 \
		cryptohash-md5-0.11.101.0_6 \
		crypton-1.1.4 \
		crypton-asn1-encoding-0.10.0 \
		crypton-asn1-parse-0.10.0 \
		crypton-asn1-types-0.4.1 \
		crypton-connection-0.4.6_1 \
		crypton-pem-0.3.0 \
		crypton-socks-0.6.2 \
		crypton-x509-1.9.1 \
		crypton-x509-store-1.9.0 \
		crypton-x509-system-1.9.0 \
		crypton-x509-validation-1.9.1_1 \
		data-default-0.8.0.2 \
		data-default-class-0.2.0.0 \
		data-fix-0.3.4_2 \
		directory-ospath-streaming-0.3_1 \
		distributive-0.6.3 \
		dlist-1.0_2 \
		easy-file-0.2.5 \
		ech-config-0.0.1_1 \
		fast-logger-3.2.6 \
		file-embed-0.0.16.0 \
		file-io-0.1.6 \
		fsnotify-0.4.4.0 \
		half-0.3.3_2 \
		happy-2.2 \
		happy-lib-2.2 \
		hashable-1.5.1.0 \
		haskell-src-exts-1.23.1 \
		haskell-src-meta-0.8.15_1 \
		hinotify-0.4.2 \
		hpke-0.1.0 \
		hsc2hs-0.68.10_5 \
		http-client-0.7.19 \
		http-client-tls-0.4.0 \
		http-date-0.0.11 \
		http-reverse-proxy-0.6.2.0 \
		http-semantics-0.4.0 \
		http-types-0.12.5 \
		http2-5.4.0_1 \
		indexed-traversable-0.1.5 \
		indexed-traversable-instances-0.1.2.1 \
		integer-conversion-0.1.1_2 \
		integer-logarithms-1.0.5 \
		iproute-1.7.15 \
		libyaml-0.1.4 \
		libyaml-clib-0.2.5 \
		lifted-base-0.2.3.12 \
		mime-types-0.1.2.2 \
		mlkem-0.2.1.0 \
		monad-control-1.0.3.1 \
		monad-logger-0.3.42 \
		monad-loops-0.4.3 \
		mono-traversable-1.0.21.0 \
		mtl-compat-0.2.2 \
		network-3.2.8.0 \
		network-byte-order-0.1.8 \
		network-control-0.1.7 \
		network-uri-2.6.4.2_1 \
		optparse-applicative-0.19.0.0_1 \
		prettyprinter-1.7.2 \
		prettyprinter-ansi-terminal-1.1.4 \
		primitive-0.9.1.0_1 \
		project-template-0.2.1.0 \
		psqueues-0.2.8.3_1 \
		ram-0.22.0 \
		random-1.3.1 \
		recv-0.1.1 \
		resourcet-1.3.0 \
		retry-0.9.3.1 \
		safe-0.3.21_1 \
		safe-exceptions-0.1.7.4_1 \
		say-0.1.0.1 \
		scientific-0.3.8.1 \
		semialign-1.4 \
		semigroupoids-6.0.2_1 \
		serialise-0.2.6.1_5 \
		simple-sendfile-0.2.32 \
		split-0.2.5 \
		splitmix-0.1.3.2 \
		stm-chans-3.0.0.11 \
		streaming-commons-0.2.3.1 \
		strict-0.5.1_1 \
		string-interpolate-0.3.4.0_6 \
		syb-0.7.4 \
		tagged-0.8.10_1 \
		tar-0.6.4.0_4 \
		tasty-1.5.4 \
		temporary-1.3 \
		text-conversions-0.3.1.1 \
		text-iso8601-0.2.0.0 \
		text-short-0.1.6.1 \
		th-abstraction-0.7.2.0 \
		th-compat-0.1.7 \
		th-expand-syns-0.4.12.0_1 \
		th-lift-0.8.7 \
		th-orphans-0.13.17 \
		th-reify-many-0.1.10 \
		these-1.2.1_3 \
		time-compat-1.9.9_1 \
		time-hourglass-0.3.0 \
		time-manager-0.3.2 \
		tls-2.4.3 \
		tls-session-manager-0.1.0_1 \
		transformers-base-0.4.6.1 \
		transformers-compat-0.7.2 \
		typed-process-0.2.13.0 \
		unix-compat-0.7.4.1 \
		unix-time-0.5.0 \
		unliftio-0.2.25.1 \
		unliftio-core-0.2.1.0_4 \
		unordered-containers-0.2.21_2 \
		utf8-string-1.0.2 \
		uuid-types-1.0.6.1 \
		vault-0.3.1.6 \
		vector-0.13.2.0_5 \
		vector-algorithms-0.9.1.0_1 \
		vector-stream-0.1.0.1_4 \
		wai-3.2.4 \
		wai-extra-3.1.18 \
		wai-logger-2.5.0 \
		warp-3.4.13.1 \
		warp-tls-3.4.14 \
		witherable-0.5_2 \
		word8-0.1.3 \
		yaml-0.11.11.2_2 \
		zlib-0.7.1.1
