--- ./libmpd.cabal.orig	2011-04-01 17:52:19.000000000 +0200
+++ ./libmpd.cabal	2011-05-22 14:39:35.000000000 +0200
@@ -33,13 +33,13 @@
 
 Library
     Build-Depends:      base >= 4 && < 5,
-                        mtl >= 2.0 && < 2.1,
-                        network >= 2.1 && < 2.4,
-                        filepath >= 1.0 && < 1.3,
-                        utf8-string >= 0.3.1 && < 0.4,
-                        old-locale >= 1.0 && < 2.0,
-                        time >= 1.1 && < 2.0,
-                        containers >= 0.4 && < 0.5
+                        mtl >= 2.0,
+                        network >= 2.1,
+                        filepath >= 1.0,
+                        utf8-string >= 0.3.1,
+                        old-locale >= 1.0,
+                        time >= 1.1,
+                        containers >= 0.4
     Exposed-Modules:    Network.MPD, Network.MPD.Commands.Extensions,
                         Network.MPD.Core
     Other-Modules:      Network.MPD.Core.Class,
