--- aeson-compat.cabal.orig	2017-06-07 12:52:36 UTC
+++ aeson-compat.cabal
@@ -42,7 +42,6 @@ library
     , containers               >=0.5  && <0.6
     , exceptions               >=0.8  && <0.9
     , hashable                 >=1.2  && <1.3
-    , nats                     >=1 && <1.2
     , scientific               >=0.3  && <0.4
     , text                     >=1.2  && <1.3
     , time                     >=1.4.2 && <1.9
@@ -70,7 +69,6 @@ test-suite aeson-compat-test
     , containers
     , exceptions
     , hashable
-    , nats
     , scientific
     , text
     , time
