--- aeson-compat.cabal.orig     2017-07-24 12:29:50 UTC
+++ aeson-compat.cabal
@@ -31,14 +31,14 @@ library
       src
   ghc-options: -Wall
   build-depends:
-      base                     >=4.6  && <4.11
-    , base-compat              >=0.6.0 && <0.10
-    , aeson                    >=0.7.0.6 && <1.3
+      base                     >=4.6  && <4.12
+    , base-compat              >=0.6.0 && <0.11
+    , aeson                    >=0.7.0.6 && <1.4
     , attoparsec               >=0.12 && <0.14
     , attoparsec-iso8601       >=1.0.0.0 && <1.1
     , bytestring               >=0.10 && <0.11
     , containers               >=0.5  && <0.6
-    , exceptions               >=0.8  && <0.9
+    , exceptions               >=0.8  && <0.11
     , hashable                 >=1.2  && <1.3
     , scientific               >=0.3  && <0.4
     , text                     >=1.2  && <1.3
