--- aeson-pretty.cabal.orig	2001-09-09 01:46:40 UTC
+++ aeson-pretty.cabal
@@ -1,6 +1,7 @@ version:        0.8.9
 cabal-version:  2.0
 name:           aeson-pretty
 version:        0.8.9
+x-revision: 1
 license:        BSD3
 license-file:   LICENSE
 category:       Text, Web, JSON, Pretty Printer
@@ -48,7 +49,7 @@ library
         scientific >= 0.3,
         vector >= 0.9,
         text >= 0.11,
-        unordered-containers >= 0.1.3.0
+        unordered-containers >= 0.2.14.0
 
     if !impl(ghc >= 8.0)
       build-depends:
