--- aeson-pretty.cabal.orig	2001-09-09 01:46:40 UTC
+++ aeson-pretty.cabal
@@ -1,6 +1,7 @@ version:        0.8.9
 cabal-version:  2.0
 name:           aeson-pretty
 version:        0.8.9
+x-revision: 2
 license:        BSD3
 license-file:   LICENSE
 category:       Text, Web, JSON, Pretty Printer
@@ -41,14 +42,14 @@ library
         Data.Aeson.Encode.Pretty
 
     build-depends:
-        aeson ^>= 1.0 || ^>=1.1 || ^>=1.2 || ^>=1.3 || ^>=1.4 || ^>=1.5 || ^>=2.0,
+        aeson ^>= 1.0 || ^>=1.1 || ^>=1.2 || ^>=1.3 || ^>=1.4 || ^>=1.5 || ^>=2.0 || ^>=2.1,
         base >= 4.5,
         base-compat >= 0.9,
         bytestring >= 0.9,
         scientific >= 0.3,
         vector >= 0.9,
         text >= 0.11,
-        unordered-containers >= 0.1.3.0
+        unordered-containers >= 0.2.14.0
 
     if !impl(ghc >= 8.0)
       build-depends:
