--- dataenc.cabal.orig	2017-07-07 17:18:23 UTC
+++ dataenc.cabal
@@ -21,7 +21,7 @@ flag tests
 
 library
     hs-source-dirs: src
-    build-depends: array, base >= 3.0.0 && < 4.8, containers
+    build-depends: array, base >= 3.0.0 && < 5, containers
     exposed-modules:
             Codec.Binary.Base16
             Codec.Binary.Base32
