--- persistent-template.cabal.orig	2017-07-10 13:31:32 UTC
+++ persistent-template.cabal
@@ -23,7 +23,7 @@ library
                    , text                     >= 0.5
                    , transformers             >= 0.2       && < 0.6
                    , containers
-                   , aeson                    >= 0.7       && < 1.2
+                   , aeson                    >= 0.7       && < 1.3
                    , aeson-compat             >= 0.3.2.0   && < 0.4
                    , monad-logger
                    , unordered-containers
