--- persistent-template.cabal.orig	2018-03-08 15:56:53 UTC
+++ persistent-template.cabal
@@ -23,13 +23,13 @@ library
                    , text                     >= 0.5
                    , transformers             >= 0.2       && < 0.6
                    , containers
-                   , aeson                    >= 0.7       && < 1.3
+                   , aeson                    >= 0.7       && < 1.4
                    , aeson-compat             >= 0.3.2.0   && < 0.4
                    , monad-logger
                    , unordered-containers
                    , tagged
                    , path-pieces
-                   , http-api-data            >= 0.2       && < 0.4
+                   , http-api-data            >= 0.2       && < 0.5
                    , ghc-prim
     exposed-modules: Database.Persist.TH
     ghc-options:     -Wall
