--- persistent.cabal.orig	2018-10-14 06:53:03 UTC
+++ persistent.cabal
@@ -33,7 +33,7 @@ library
                    , resourcet                >= 1.1.10
                    , resource-pool            >= 0.2.2.0
                    , path-pieces              >= 0.1
-                   , http-api-data            >= 0.2       && < 0.4
+                   , http-api-data            >= 0.2       && < 0.5
                    , aeson                    >= 0.5
                    , monad-logger             >= 0.3.28
                    , base64-bytestring
