--- BUILD.bazel.orig	2023-09-14 12:15:33 UTC
+++ BUILD.bazel
@@ -223,7 +223,7 @@ cc_library(
             "src/impl_aarch64_windows.c",
         ],
         PLATFORM_CPU_MIPS: ["src/impl_mips_linux_or_android.c"],
-        PLATFORM_CPU_PPC: ["src/impl_ppc_linux.c"],
+        PLATFORM_CPU_PPC: ["src/impl_ppc_linux.c", "src/impl_ppc_freebsd.c"],
         PLATFORM_CPU_RISCV32: ["src/impl_riscv_linux.c"],
         PLATFORM_CPU_RISCV64: ["src/impl_riscv_linux.c"],
     }),
@@ -283,7 +283,7 @@ cc_library(
             "src/impl_aarch64_windows.c",
         ],
         PLATFORM_CPU_MIPS: ["src/impl_mips_linux_or_android.c"],
-        PLATFORM_CPU_PPC: ["src/impl_ppc_linux.c"],
+        PLATFORM_CPU_PPC: ["src/impl_ppc_linux.c", "src/impl_ppc_freebsd.c"],
         PLATFORM_CPU_RISCV32: ["src/impl_riscv_linux.c"],
         PLATFORM_CPU_RISCV64: ["src/impl_riscv_linux.c"],
     }),
