--- ./darcs.cabal.orig	2010-05-09 15:23:32.000000000 +0200
+++ ./darcs.cabal	2010-05-15 13:36:40.000000000 +0200
@@ -328,7 +328,7 @@
                    html         == 1.0.*,
                    filepath     == 1.1.*,
                    haskeline    >= 0.6.1 && < 0.7,
-                   hashed-storage == 0.4.13
+                   hashed-storage
 
   if !os(windows)
     build-depends: unix >= 1.0 && < 2.5
@@ -459,7 +459,7 @@
                    html         == 1.0.*,
                    filepath     == 1.1.*,
                    haskeline    >= 0.6.1 && < 0.7,
-                   hashed-storage == 0.4.13
+                   hashed-storage
 
   if !os(windows)
     build-depends: unix >= 1.0 && < 2.5
